spec/data/mockDefs/valid/mockDefValid1.js
const sayHello = () => {};

module.exports = function () {
  return {
    respondTo: 'GET',
    authMethod: 'Foo',
    endpoint: '/api/hello/:name',
    handledBy: sayHello,
  };
};
